--- a/style-home-page.css
+++ b/style-home-page.css
@@ -66,7 +66,7 @@ h1.intro-text{
   background-color: #f76c6c;
 }
 
-.report-div img.left-img{
+img.left-img{
   float: left;
   width: 40%;
   height: 100%;
@@ -107,7 +107,7 @@ h2{
   background-color: #39424e;
 }
 
-.lost-div img.right-img{
+img.right-img{
   float: right;
   width: 40%;
   height: 100%;
@@ -121,4 +121,58 @@ h2{
 
 .lost-section button{
   margin: 2% 0% 0% 10%;
+}
+
+/* ------------------------------------------------------------------------- */
+/* Statistics section */
+
+.stats-div{
+  width: 100%;
+  height: 400px;
+  background-color: #f76c6c;
+}
+
+.stats-section{
+  padding: 7% 0% 0% 45%;
+  color: white;
+}
+
+.stats-section button{
+  margin: 2% 0% 0% 20%;
+}
+
+/* ------------------------------------------------------------------------- */
+/* Animal Cruelty section */
+
+.animal-div{
+  width: 100%;
+  height: 400px;
+  background-color: #39424e;
+}
+
+.animal-section{
+  padding: 7% 2% 2% 5%;
+  color: white;
+}
+
+.animal-section button{
+  margin: 2% 0% 0% 10%;
+}
+
+/* ------------------------------------------------------------------------- */
+/* Police Station section */
+
+.police-div{
+  width: 100%;
+  height: 400px;
+  background-color: #f76c6c;
+}
+
+.police-section{
+  padding: 7% 0% 0% 45%;
+  color: white;
+}
+
+.pincode-input{
+  margin: auto 10px;
 }
