--- a/style-home-page.css
+++ b/style-home-page.css
@@ -176,3 +176,52 @@ img.right-img{
 .pincode-input{
   margin: auto 10px;
 }
+
+/* ------------------------------------------------------------------------- */
+/* footer section */
+
+.quote{
+  text-align: center;
+  padding: 10px 0px 12px 0px;
+  margin-bottom: 0;
+  color: white;
+}
+
+.footer-div{
+  width: 100%;
+  color: white;
+  padding: 5% 5%;
+  margin: 0;
+  box-shadow: 0px -2px #f76c6c;
+}
+
+.footer-icon{
+  width: 20px;
+  height: 20px;
+  margin: 4% 15px 4% 0%;
+  cursor: pointer;
+  filter: invert(100%);
+}
+
+.footer-text{
+  font-size: 20px;
+  color: #aaa;
+}
+
+.footer-list{
+  list-style: none;
+  padding-left: 0;
+  cursor: pointer;
+}
+
+.list{
+  margin-bottom: 5px;
+}
+
+.footer-input{
+  margin: 10px 5px 20px auto;
+}
+
+.footer-button{
+  box-shadow: 4px 4px black;
+}
